--- a/Quick.AvaloniaFonts.AlibabaPuHuiTi.Slim/Quick.AvaloniaFonts.AlibabaPuHuiTi.Slim.csproj
+++ b/Quick.AvaloniaFonts.AlibabaPuHuiTi.Slim/Quick.AvaloniaFonts.AlibabaPuHuiTi.Slim.csproj
@@ -3,8 +3,21 @@
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <Version>1.0.0</Version>
+        <Title>Alibaba PuHuiTi fonts for Avalonia</Title>
+        <Description>Alibaba PuHuiTi fonts for Avalonia</Description>
+        <PackageProjectUrl>https://github.com/Quick-AvaloniaFonts/Quick.AvaloniaFonts.AlibabaPuHuiTi</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/Quick-AvaloniaFonts/Quick.AvaloniaFonts.AlibabaPuHuiTi</RepositoryUrl>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
+
+    <ItemGroup>
+        <None Include="..\README.md">
+            <Pack>True</Pack>
+            <PackagePath>\</PackagePath>
+        </None>
+    </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Avalonia" Version="11.0.4" />
